<resources>
    <string name="app_name">App25</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="age">Age</string>
</resources>
